--- a/gallery.html
+++ b/gallery.html
@@ -18,6 +18,6 @@ galleries:
 ---
 
 
-Hello, this page will be my new "instagram" where I can share images that I want. Need to implement a gallery page however or quite quickly the load times will be too much.
+Hello, this is a placeholder page for a new gallery feature that im working on, which will provide inspirational assets and visuals for projects.
 
 {% include gallery.html  gallery=1 %}
