Add gallery objects

--- a/gallery.html
+++ b/gallery.html
@@ -1,23 +1,28 @@
 ---
 layout: page
 title:  Gallery
-permalink: /gallery/
 galleries:
  1:
    -
-     - { url: '/img/china-buckle.jpg', alt: 'China Clip Bag'}
-     - { url: '/img/bike-mount.jpg', alt: 'Bike Mount'}
-     - { url: '/img/print-action.jpg', alt: 'Mount'}
+     - { url: '\img\gallery\contour.png', alt: 'Contour'}
+     - { url: '\img\gallery\glitch.gif', alt: 'Glitch'}
+
  2:
    -
-     - { url: '/img/sketch-1.jpg', alt: 'China Clip Bag'}
-     - { url: '/img/sketch-2.jpg', alt: 'China Clip Bag'}
-     - { url: '/img/sketch-3.jpg', alt: 'China Clip Bag'}
-     - { url: '/img/sketch-4.jpg', alt: 'China Clip Bag'}
-
+     - { url: '\img\gallery\dancin.gif', alt: 'Dancin'}
+     - { url: '\img\gallery\glitch.gif', alt: 'Glitch'}
 ---
 
 
-Hello, this is a placeholder page for a new gallery feature that im working on, which will provide inspirational assets and visuals for projects.
+Graphics and visual renders for various projects both independently and with cjgstudio.com
 
 {% include gallery.html  gallery=1 %}
+{% include gallery.html  gallery=2 %}
+
+<p style="text-align:center;">
+  <iframe width="500"
+  src="https://corrie.dev/img/gallery/logo.mp4" 
+  frameborder="0" 
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </p>
+
