--- a/gallery.html
+++ b/gallery.html
@@ -21,10 +21,11 @@ galleries:
   frameborder="0" 
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </p>
-  <img src="\img\gallery\logos.png" alt="Contour" width=500/> <br>
+  <img src="\img\gallery\runner.gif" alt="Contour" width=500/> <br>
   <img src="\img\gallery\pa-1.png" alt="Contour" width=500/> <br>
   <img src="\img\gallery\pa-2.png" alt="Contour" width=500/> <br>
   <img src="\img\gallery\arcade.png" alt="Contour" width=500/> <br>
+  <img src="\img\gallery\logos.png" alt="Contour" width=500/> <br>
   <p style="text-align:center;">
   <iframe width="560" height="315" src="https://www.youtube.com/embed/NqCA4BS-XII"
    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -41,12 +42,6 @@ galleries:
 
   <img src="\img\gallery\slice.png" alt="Contour" width=500/> <br>
 
-    <p style="text-align:center;">
-    <iframe width="520" height="297"
-    src="https://corrie.dev/img/gallery/collider.mp4" 
-    frameborder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </p>
   <img src="\img\gallery\water.gif" alt="Contour" width=500/> <br>
   <img src="\img\gallery\wave.jpg" alt="Contour" width=500/> <br>
   <img src="\img\gallery\winter-sphere.png" alt="Contour" width=500/> <br>
