Artstation replace behance
need to update the rest of the font awesome
need to format the art station page
VR Interaction
Unity Ray Tracing
Enviornments

--- a/gallery.html
+++ b/gallery.html
@@ -5,38 +5,5 @@ galleries:
 
 ---
 
-<img src="\img\gallery\contour.png" alt="Contour" width=500/> <br>
-<img src="\img\gallery\glitch.gif" alt="Contour" width=500/> <br>
-<img src="\img\gallery\dancin.gif" alt="Contour" width=500/> <br>
-
-<p style="text-align:center;">
-  <iframe width="520" height="297"
-  src="https://corrie.dev/img/gallery/logo.mp4" 
-  frameborder="0" 
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </p>
-  <img src="\img\gallery\runner.gif" alt="Contour" width=500/> <br>
-  <img src="\img\gallery\pa-1.png" alt="Contour" width=500/> <br>
-  <img src="\img\gallery\pa-2.png" alt="Contour" width=500/> <br>
-  <img src="\img\gallery\arcade.png" alt="Contour" width=500/> <br>
-  <img src="\img\gallery\logos.png" alt="Contour" width=500/> <br>
-  <p style="text-align:center;">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/NqCA4BS-XII"
-   frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</p>
-<p style="text-align:center;">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/tLWBFiGGICk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</p> 
-<img src="\img\gallery\collider-2.jpg" alt="Contour" width=500/> <br>
-  <img src="\img\gallery\forest.png" alt="Contour" width=500/> <br>
-
-  <img src="\img\gallery\hdr.gif" alt="Contour" width=500/> <br>
-
-  <img src="\img\gallery\metro.jpg" alt="Contour" width=500/> <br>
-
-  <img src="\img\gallery\slice.png" alt="Contour" width=500/> <br>
-
-  <img src="\img\gallery\water.gif" alt="Contour" width=500/> <br>
-  <img src="\img\gallery\wave.jpg" alt="Contour" width=500/> <br>
-  <img src="\img\gallery\winter-sphere.png" alt="Contour" width=500/> <br>
-  <img src="\img\gallery\xoid.gif" alt="Contour" width=500/> <br>
+Currently hosting content at 
+<a href="https://www.artstation.com/corriedotdev">my art station page </a>
