--- a/viewer/viewer.html
+++ b/viewer/viewer.html
@@ -27,8 +27,8 @@
     <div class="container">
             <div class="row">
                 <div class="col-sm-4">           
-                    <model-viewer class="model" src="assets/models/box.gltf" 
-                        poster="poster.webp" shadow-intensity="0" auto-rotate disable-pan camera-controls 
+                    <model-viewer class="model" src="assets/models/Box.gltf" 
+                        poster="poster.webp" shadow-intensity="0" auto-rotate disable-pan ar camera-controls 
                         camera-target="0m 0m 0m" environment-image="legacy" touch-action="pan-y" shadow-softness="0"  
                         min-camera-orbit="auto auto auto" min-field-of-view="30deg"> 
                     </model-viewer>
@@ -46,7 +46,7 @@
             <div class="row">
                 <div class="col-sm-4">           
                         <model-viewer class="model" src="assets/models/ETH.gltf" 
-                            poster="poster.webp" shadow-intensity="0" auto-rotate disable-pan camera-controls interaction-prompt 
+                            poster="poster.webp" shadow-intensity="0" auto-rotate disable-pan ar camera-controls interaction-prompt 
                             camera-target="0m 1.67m 0m" environment-image="legacy" touch-action="pan-y" shadow-softness="0"  
                             min-camera-orbit="auto auto auto" min-field-of-view="30deg"> 
                             <div class="progress-bar hide" slot="progress-bar">
@@ -70,8 +70,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-4">           
-                        <model-viewer class="model" src="assets/models/star.gltf" 
-                            poster="poster.webp" shadow-intensity="0" auto-rotate disable-pan camera-controls interaction-prompt
+                        <model-viewer class="model" src="assets/models/Star.gltf" 
+                            poster="poster.webp" shadow-intensity="0" auto-rotate disable-pan ar camera-controls interaction-prompt
                             camera-target="0m 0m 0m" environment-image="legacy" touch-action="pan-y" shadow-softness="0"  
                             min-camera-orbit="auto auto auto" min-field-of-view="30deg"> 
                             <div class="progress-bar hide" slot="progress-bar">
@@ -96,12 +96,10 @@
             <div class="row">
                 <div class="col-sm-4">           
                         <model-viewer class="model" src="assets/models/ETH.gltf" 
-                            poster="poster.webp" shadow-intensity="0" auto-rotate disable-pan camera-controls interaction-prompt
+                            poster="poster.webp" shadow-intensity="0" auto-rotate disable-pan ar camera-controls interaction-prompt
                             camera-target="0m 1.67m 0m" environment-image="legacy" touch-action="pan-y" shadow-softness="0"  
                             min-camera-orbit="auto auto auto" min-field-of-view="30deg"> 
-                            <div class="progress-bar hide" slot="progress-bar">
-                                <div class="update-bar"></div>
-                            </div>
+
                         </model-viewer>
                 </div>
 
