--- a/3dviewer/viewer.html
+++ b/3dviewer/viewer.html
@@ -34,7 +34,8 @@
                         ar
                         camera-controls
                         interaction-prompt="none"
-                        auto-rotate disable-pan ar camera-controls 
+                        auto-rotate 
+                        disable-pan
                         camera-target="0m 0m 0m" 
                         environment-image="legacy" 
                         touch-action="pan-y" 
@@ -42,6 +43,9 @@
                         min-camera-orbit="auto auto auto" 
                         min-field-of-view="30deg"> 
                     </model-viewer>
+
+
+
                 </div>
         
                 <div class="col-sm-6"> 
