screenshot page test

--- a/3dviewer/viewer.html
+++ b/3dviewer/viewer.html
@@ -43,7 +43,17 @@
                         min-camera-orbit="auto auto auto" 
                         min-field-of-view="30deg"> 
                     </model-viewer>
-
+                    <section class="attribution">
+                        <span>
+                          <button id="downloadPosterToBlob" onclick="downloadPosterToBlob()">
+                            Download Poster: toBlob()
+                          </button>
+                
+                          <button id="downloadPosterToDataURL" onclick="downloadPosterToDataURL()">
+                            Download Poster: toDataURL()
+                          </button>
+                        </span>
+                      </section>
 
 
                 </div>
