--- a/3dviewer/screenshot.html
+++ b/3dviewer/screenshot.html
@@ -35,13 +35,12 @@
       <model-viewer
         id="viewer"
         style="width: 400px; height: 400px;"
-        src="assets/models/Box.gltf"
+        src="assets/models/Box.glb"
         ios-src="https://cdn.glitch.com/05742b05-61cf-4d2d-9c10-8725e0771dfa%2FAstronaut.usdz?v=1590071455140"
         alt="A 3D model of an astronaut"
         ar
         camera-controls
-        interaction-prompt="none"
-      >
+        interaction-prompt="none">
       </model-viewer>
       <section class="attribution">
         <span>
