--- a/3dviewer/screenshot.html
+++ b/3dviewer/screenshot.html
@@ -39,9 +39,9 @@
             <button slot="ar-button" id="ar-button">
                 View in your space
             </button>
-            <div id="ar-prompt">
+            <!-- <div id="ar-prompt">
                 <img src="https://modelviewer.dev/shared-assets/icons/hand.png">
-            </div>
+            </div> -->
         </model-viewer>
         
     </div>
