--- a/3dviewer/screenshot.html
+++ b/3dviewer/screenshot.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,84 +7,133 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="stylesheet" href="assets/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
-        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous">
 
     <!-- Web Components polyfill to support Edge and Firefox < 63 -->
-    <script src="https://unpkg.com/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-
+    <script
+      src="https://unpkg.com/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
     <!-- Intersection Observer polyfill for better performance in Safari and IE11 -->
-    <script src="https://unpkg.com/intersection-observer/intersection-observer.js"></script>
-
+    <script
+      src="https://unpkg.com/intersection-observer/intersection-observer.js"></script>
     <!-- Resize Observer polyfill improves resize behavior in non-Chrome browsers -->
-    <script src="https://unpkg.com/resize-observer-polyfill/dist/ResizeObserver.js"></script>
-
+    <script
+      src="https://unpkg.com/resize-observer-polyfill/dist/ResizeObserver.js"></script>
     <!-- Fullscreen polyfill is needed to fully support AR features -->
-    <script src="https://unpkg.com/fullscreen-polyfill/dist/fullscreen.polyfill.js"></script>
-
+    <script
+      src="https://unpkg.com/fullscreen-polyfill/dist/fullscreen.polyfill.js"></script>
     <!-- Include prismatic.js for Magic Leap support -->
     <script src="https://unpkg.com/@magicleap/prismatic/prismatic.min.js"></script>
-
     <!-- 💁 OPTIONAL: The :focus-visible polyfill removes the focus ring for some input types -->
     <script
       src="https://unpkg.com/focus-visible/dist/focus-visible.js"
-      defer
-    ></script>
+      defer></script>
   </head>
   <body>
+    <h2>3D Heritage Library</h2>
 
+    <!-- Tizzie-->
     <div class="container">
+
       <div class="row">
-          <div class="col-sm-4">           
-                  <model-viewer class="model" src="assets/models/ETH.gltf" 
-                  ar ar-modes="scene-viewer webxr quick-look" camera-controls poster="poster.webp" shadow-intensity="1"> 
-                      <div class="progress-bar hide" slot="progress-bar">
-                          <div class="update-bar"></div>
-                      </div>
-                  </model-viewer>
-          </div>
 
-          <div class="col-sm-6"> 
-              <H1>ETH Token, 1991</H1>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-              when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, 
-              but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum 
-              passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-              <p>Lorem Ipsum is simply dummy text</p>
-          </div>
-      </div>
-  </div>
-
-
-
-    <div id="card">
-        <model-viewer src="assets/models/Box.glb" ar ar-modes="scene-viewer webxr quick-look" camera-controls poster="poster.webp" shadow-intensity="1">
+        <div class="col-sm-4">
+          <model-viewer class="model" src="assets/models/Tizzie.glb"
+            ar ar-modes="scene-viewer webxr quick-look" camera-controls
+            poster="poster.webp" shadow-intensity="1">
             <div class="progress-bar hide" slot="progress-bar">
-                <div class="update-bar"></div>
+              <div class="update-bar"></div>
             </div>
-            <!-- <button slot="ar-button" id="ar-button">
-                View in your space
-            </button> -->
-            <div id="ar-prompt">
-                <img src="https://modelviewer.dev/shared-assets/icons/hand.png">
-            </div>
-        </model-viewer>
-        
+          </model-viewer>
+          <section class="attribution">
+            <span>
+              <button id="downloadPosterToBlob"
+                onclick="downloadPosterToBlob()">
+                Screenshot
+              </button>
+              <!--             
+                      <button id="downloadPosterToDataURL" onclick="downloadPosterToDataURL()">
+                        Download Poster: toDataURL()
+                      </button> -->
+            </span>
+          </section>
+
+        </div>
+
+        <div class="col-sm-6">
+          <H1>Tizzie, 1991</H1>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s,
+            when an unknown printer took a galley of type and scrambled it to
+            make a type specimen book. It has survived not only five centuries,
+            but also the leap into electronic typesetting, remaining essentially
+            unchanged. It was popularised in the 1960s with the release of
+            Letraset sheets containing Lorem Ipsum
+            passages, and more recently with desktop publishing software like
+            Aldus PageMaker including versions of Lorem Ipsum.</p>
+          <p>Lorem Ipsum is simply dummy text</p>
+        </div>
+
+      </div>
     </div>
+
+    <!-- Doll Dress-->
+    <div class="container">
+
+      <div class="row">
+
+        <div class="col-sm-4">
+          <model-viewer class="model" src="assets/models/Doll_Dress.glb"
+            ar ar-modes="scene-viewer webxr quick-look" camera-controls
+            poster="poster.webp" shadow-intensity="1">
+            <div class="progress-bar hide" slot="progress-bar">
+              <div class="update-bar"></div>
+            </div>
+          </model-viewer>
+          <section class="attribution">
+            <span>
+              <button id="downloadPosterToBlob"
+                onclick="downloadPosterToBlob()">
+                Screenshot
+              </button>
+            </span>
+          </section>
+
+        </div>
+
+        <div class="col-sm-6">
+          <H1>Doll Dress, 1991</H1>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s,
+            when an unknown printer took a galley of type and scrambled it to
+            make a type specimen book. It has survived not only five centuries,
+            but also the leap into electronic typesetting, remaining essentially
+            unchanged. It was popularised in the 1960s with the release of
+            Letraset sheets containing Lorem Ipsum
+            passages, and more recently with desktop publishing software like
+            Aldus PageMaker including versions of Lorem Ipsum.</p>
+          <p>Lorem Ipsum is simply dummy text</p>
+        </div>
+
+      </div>
+    </div>
+
+
 
 
     <!-- 💁 Include both scripts below to support all browsers! -->
     <!-- Loads <model-viewer> for modern browsers: -->
     <script
       type="module"
-      src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"
-    ></script>
+      src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"></script>
     <script
       nomodule
-      src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"
-    ></script>
-
+      src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
     <!-- Download Model-Viewer generated poster image -->
     <script>
       const modelViewer = document.getElementById("viewer");
@@ -109,6 +157,5 @@
         URL.revokeObjectURL(url);
       }
     </script>
-    
   </body>
 </html>
